# gosam

./: .git-blame-ignore-revs  .gitattributes  .gitignore  COPYING  INSTALL_REDUZE.txt  MANIFEST.in  Makefile  PKG-INFO  README  Readme.md  cement-version.sh  gosam_setup_env.sh.in  meson.build  meson_options.txt  setup.cfg  setup.py  uninstall.py
olp/templates/: Makefile  Makefile.am  Makefile.conf  autogen.sh  build_olp_library.sh  config.sh  config.sh.in  configure.ac  install_mod_files.py  make_parallel.py  meson.build  meson_options.txt  olp.h  olp_daemon.c  olp_daemon.h  olp_lexer.l  olp_model.f90  olp_module.f90  olp_parser.y  template.xml
olp/templates/common/: Makefile.source  SpinorBrackets.f90  SpinorBrackets_qp.f90  accu.f90  accu_qp.f90  buildmodel.py  config.f90  custompropagator.f90  func.hh  generate_source.sh  info.frm  kinematicsdef.py  meson.build  modelopt.frm  pythonin.py  symbols.hh  t2f.py
olp/templates/subprojects/: avh_olo.wrap  golem95.wrap
olp/templates/subprojects/packagefiles/avh_olo/: create.py.patch
src/python/golem/: __init__.py  __main__.py  golem-config.py  golem-init.py  golem-main.py  gosam-config.py  gosam-config.py.in  gosam.py  gosam.py.in  installation.py  installation.py.in  meson.build  properties.py  shell.py
src/python/golem/algorithms/: color.py  formfactors.py  helicity.py  mandelstam.py
src/python/golem/app/: main.py  olp.py
src/python/golem/diagrams/: checks.py  filters.py  main_feyngraph.py  methods.py  objects.py
src/python/golem/model/: __init__.py  calchep.py  expressions.py  feynrules.py  particle.py  scanner.py  ufo_stub.pyi
src/python/golem/pyxo/: objects.py  pyxodraw.py
src/python/golem/templates/: analyzer.py  factory.py  filter.py  integrals.py  integrals_doc.py  kinematics.py  multi.py  olp.py  parameters.py  xmltemplates.py
src/python/golem/topolopy/: functions.py  objects.py  userlib.py
src/python/golem/util/: config.py  constants.py  find_libpaths.py  ishell.py  main_color.py  main_feyngraph.py  main_helicity.py  main_misc.py  main_process.py  main_qgraf.py  main_reduze.py  olp.py  olp_objects.py  olp_options.py  parser.py  path.py  tools.py
subprojects/packagefiles/avh_olo/: create.py.patch  meson.build
subprojects/packagefiles/ff/: meson.build
subprojects/packagefiles/form/: config.h.meson  meson.build
subprojects/packagefiles/form/sources/: meson.build
subprojects/packagefiles/golem/: meson.build
subprojects/packagefiles/golem/src/: meson.build
subprojects/packagefiles/golem/src/form_factor/: meson.build
subprojects/packagefiles/golem/src/module/: meson.build
subprojects/packagefiles/ninja/: genquadsources.sed.patch  install_mod_files.py  meson.build  ninjago.F90.patch  types.hh.patch
subprojects/packagefiles/qcdloop/: meson.build
subprojects/packagefiles/samurai/: madds.f90.in.patch  meson.build
subprojects/packagefiles/samurai/samurai/: meson.build
templates/: Makefile  Makefile.am  Makefile.conf  Makefile.source  acinclude.m4  config.sh  config.sh.in  config_EFT.sh  configure.ac  form.set  install_mod_files.py  meson.build  meson_options.txt  template.xml  template_EFT.xml
templates/amplitude/: Makefile  Makefile.source  amplitude.hpp  invariants.hpp  parameters.hpp  secdec.m  test.cpp  toreduze.py  tosecdec.py  typedef.hpp
templates/codegen/: abbrev.in  abbrev.out  abbreviate.hh  abbrevloc.out  buildcolor.py  buildfortran.py  buildfortran_0.py  buildfortran_0_d.py  buildfortran_0_tmu.py  buildfortran_0_tn2.py  buildfortran_0_tn3.py  buildfortran_1.py  buildfortran_1_d.py  buildfortran_1_tmu.py  buildfortran_1_tn2.py  buildfortran_1_tn3.py  buildfortran_2.py  buildfortran_2_d.py  buildfortran_2_tmu.py  buildfortran_2_tn2.py  buildfortran_2_tn3.py  buildfortran_d.py  buildfortran_n2.py  buildfortran_n3.py  buildfortran_tmu.py  buildfortran_tn2.py  buildfortran_tn3.py  buildfortranborn.py  buildfortranborn_0.py  buildfortranborn_1.py  buildfortranborn_2.py  buildfortranct.py  buildfortraneftct.py  buildkinematics.py  buildmodel.py  coefficient_headers.py  color.frm  color.hh  color.in  color.out  (+90 more)
templates/codegen/reduze/config/: kinematics.yaml
templates/codegen/reduze/loop/: reduze_insert.yaml  reduze_setup.yaml
templates/codegen/secdec/loop/: Makefile
templates/common/: Makefile  Makefile.am  Makefile.dep  Makefile.source  SpinorBrackets.f90  SpinorBrackets_qp.f90  accu.f90  accu_qp.f90  config.f90  counterterms.f90  counterterms_qp.f90  custompropagator.f90  ddrrdecl.h  declmasses.h  declscalars.h  dipoles.f90  dipoles_qp.f90  dzdecl.h  ew_ct.f90  generate_source.sh  globalsl1.f90  globalsl1_qp.f90  groups.f90  kinematics.f90  kinematics_qp.f90  meson.build  pjfry95pg.f90  pjfry_comb.f90  precision_pjfry.f90  rambo.f90  rambo_qp.f90  realparam.h  scalar_cache.f90  util.f90  util_qp.f90
templates/doc/: Makefile  Makefile.am  axodraw.sty  generate_doc.sh  gind.ist  meson.build  process.tex  pyxo.sty
templates/helicity/: Makefile  Makefile.am  Makefile.dep  Makefile.source  amplitude.f90  amplitude_0.f90  amplitude_0_qp.f90  amplitude_1.f90  amplitude_1_qp.f90  amplitude_2.f90  amplitude_2_qp.f90  amplitude_qp.f90  ct_amplitude.f90  ct_amplitude_qp.f90  diagramsct.f90  diagramsl0.f90  diagramsl0.inc  diagramsl0fr5.f90  diagramsl1.hh  form.set  generate_source.sh  globals.f90  globals_qp.f90  golem95.f90  golem95_0.f90  golem95_1.f90  golem95_2.f90  meson.build  ninja.f90  ninja_0.f90  ninja_0_qp.f90  ninja_1.f90  ninja_1_qp.f90  ninja_2.f90  ninja_2_qp.f90  ninja_qp.f90  samurai.f90
templates/matrix/: Makefile  Makefile.am  Makefile.dep  crossing.f90  matrix.f90  matrix_dp.f90  matrix_old.f90  matrix_qp.f90  meson.build  ph_test.f  powhegbox.f90  refine_momenta.cpp  rescue.f90  test.f90
templates/subprojects/: ninja.wrap
templates/subprojects/packagefiles/ninja/: install_mod_files.py  meson_options.txt
templates/sum/: Makefile  Makefile.am  Makefile.dep  Makefile.source  amplitude.f90  amplitude_qp.f90  diagramsl0.f90  diagramsl0_qp.f90  generate_source.sh  globals.f90  globals_qp.f90  golem95.f90  meson.build  ninja.f90  ninja_qp.f90  samurai.f90
(+1092 files in other folders)
